# Software-Engineering-Comprehensive-Practice

./: README.md  build_vector.py  config.py  infer.py  pdftomarkdown.py  pyproject.toml  rag_api.py  rag_qa_system.py  requirements.txt  run.py  vllm_infer.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  middleware.py  routes.py
app/core/: __init__.py  _retrieval.py  embeddings.py  llm_client.py  rag_engine.py
app/models/: __init__.py  schemas.py
app/sessions/: __init__.py  manager.py
app/utils/: __init__.py  logger.py  rate_limiter.py
static/: index.html
static/css/: style.css
static/js/: api.js  app-bundle.js  app.js  render.js  ui.js
tests/: test_rag_engine.py  test_rate_limiter.py  test_sessions.py
